updated Code for text and margin under .top-content

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
     <img class="code-image" src="https://raw.githubusercontent.com/moonmantrey93/User-Interface/master/great-idea-website/img/header-img.png" alt="Image of a code snippet.">
   
     <section class="top-content">
-      <div class="head1">
+      <div class="header1">
         <h4>Features</h4>
         <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
       </div>
-      <div class="head1">
+      <div class="header1">
         <h4>About</h4>
         <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
       </div>
