more updates for a better page

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <img class="logo" src="https://tk-assets.lambdaschool.com/c7e8c14d-d7ad-4d21-9c18-4a68c77e5ad5_logo.png" alt="Great Idea! Company logo.">
   </header>
 
-    <div class="cta-text">
+    <div class="Quote">
       <h1>Innovation<br> On<br> Demand</h1>
       <button>Get Started</button>
     </div>
@@ -45,16 +45,16 @@
 
     <img class="middle-img" src="https://raw.githubusercontent.com/moonmantrey93/User-Interface/master/great-idea-website/img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
 
-    <section class="bottom-content">
-      <div class="text-content">
+    <section class="bottom">
+      <div class="paragraph4">
         <h4>Services</h4>
         <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
       </div>
-      <div class="text-content">
+      <div class="paragraph4">
         <h4>Product</h4>
         <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
       </div>
-      <div class="text-content">
+      <div class="paragraph4">
         <h4>Vision</h4>
         <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
       </div>
