--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <p>Copyright Great Idea! 2018</p>
   </footer>
 
-</div><!-- container -->- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
+</div>
 </body>
 
 </html>
